Fix cover image and thumbnails on mobile

--- a/assets/ananke/css/_styles.css
+++ b/assets/ananke/css/_styles.css
@@ -27,8 +27,10 @@
   max-height: 100%;
 }
 
-.mxh9 {
-  max-height: 9em;
+@media screen and (min-width: 30em) {
+  .mxh9-ns {
+    max-height: 9em;
+  }
 }
 
 .h-max-content {
